feat: 일반 사원 로그인 및 권한별 접근 제어 추가
- EmpAuth 모델 + EmpAuthMapper (MERGE INTO 방식 upsert)
- JwtUtil: role 클레임 추가 (ADMIN/USER)
- JwtFilter: role → ROLE_ADMIN/ROLE_USER 권한 등록
- SecurityConfig: BCryptPasswordEncoder 빈 추가
- AuthController: 사번/비밀번호 사원 로그인 + set-password 엔드포인트
- EmpController: 관리자/본인 권한 체크 (전체조회·등록·삭제는 ADMIN, 수정·조회는 본인도 가능)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>